@@ -33,7 +33,7 @@
 (format t "~%type in a number of days you want to simulate or just press ENTER for 1 day")
 (format t "~%type `quit' to exit")
 (format t "~%type `source' to get the link to the source code.")
-(format t "~%type `down-source' to get a copy of the source-code in you current directory (Only works in CLISP. wget required)")
+;; (format t "~%type `down-source' to get a copy of the source-code in you current directory (Only works in CLISP. wget required)") ;Removed 
 (format t "~%type `lightning' to emulate a lightning-bolt hitting a plant to produce fire, and see the world burn.~%")
 ;;(fresh-line) (princ #\newline)
 (evolution))
@@ -61,11 +61,8 @@
                               (format t "~%A # shows a fire burning.~%")
                               (evolution)
                               )
-          ((equal str "source") (format t "~%Look at the source here: https://gist.github.com/4460470~%")
+          ((equal str "source") (format t "~%Look at the source here: https://github.com/codepony/an_evolution.lisp~%")
                                 (evolution))
-          ((equal str "down-source") (run-shell-command "wget https://gist.github.com/4460470/download -O an_evolution.lisp.tar.gz")
-                                     (fresh-line) (princ #\newline)
-                                     (evolution))
           ((equal str "lightning")
            (if (> (hash-table-count *plants*) 0)
              (setfire)
